--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <script src="index.js"></script>
+  <script src="js/index.js"></script>
 </head>
 <body>
 
@@ -50,7 +50,7 @@
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin">Who Am I?</h3>
   <p>
-    Hello, I'm a Computer science enthusiast and B.Tech Information Technology graduate having a year of experience as Software Development Engineer in Internet/Ad-Tech industry.
+    Hello, I'm a Computer science enthusiast and B.Tech Information Technology graduate having a year of experience as Software Development Engineer in Internet/ERP industry.
     <br>
     I'm passionate about programming and delivering, clean, test-covered, well-designed and scalable code. I seek to learn and try to apply all of it in a way that makes life easier. I always try to design, develop and deliver technology solutions to problems around me.
     <br>
