--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <!-- icon library -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src='https://kit.fontawesome.com/a076d05399.js'></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="js/index.js"></script>
@@ -38,7 +41,7 @@
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">Welcome to my webspace!!!</h3>
-  <img src="img/profile.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
+  <img src="img/profile.jpg" class="img-responsive img-circle margin" alt="Profile" width="300" height="300">
   <h3>
     <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, I am Jatan.", "I am Creative.", "I Love Design.", "I Love to Develop." ]'>
       <span class="wrap"></span>
@@ -56,6 +59,16 @@
     <br>
     I have strong hold on computer science fundamentals including Algorithms, Data structures, OOPs, Design Patterns, Operating Systems, Database Systems and Computer Networking.
   </p>
+</div>
+
+<!-- Third Container (Grid) -->
+<div class="container-fluid bg-5 text-center">    
+  <h3 class="margin">
+    <i class='fas fa-laptop-code' style='font-size:24px'></i>
+    Skills
+  </h3><br>
+  
+  </div>
 </div>
 
 <!-- Third Container (Grid) -->
@@ -77,8 +90,16 @@
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
     <p>
-        Let's connect!!!<br>
-        Shoot at <u>rathodjatan@gmail.com</u>
+      <i class='fas fa-quote-left' style='font-size:24px'></i>
+      <i class='fas fa-quote-right' style='font-size:24px'></i>
+      <br>
+      Let's connect!!!<br>
+      Shoot at <u>rathodjatan@gmail.com</u>
+      <br>
+      <a href="#" class="fa fa-facebook"></a>
+      <a href="#" class="fa fa-twitter"></a>
+      <a href="#" class="fa fa-github"></a>
+      <a href="#" class="fa fa-instagram"></a>
     </p> 
 </footer>
 
