--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src='https://kit.fontawesome.com/a076d05399.js'></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
   <script src="js/index.js"></script>
 </head>
 <body>
@@ -42,11 +43,8 @@
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">Welcome to my webspace!!!</h3>
   <img src="img/profile.jpg" class="img-responsive img-circle margin" alt="Profile" width="300" height="300">
-  <h3>
-    <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, I am Jatan.", "I am Creative.", "I Love Design.", "I Love to Develop." ]'>
-      <span class="wrap"></span>
-    </a>
-  </h3>  
+  <br>
+  <h3><p id="about"></p></h3>
 </div>
 
 <!-- Second Container -->
@@ -59,16 +57,6 @@
     <br>
     I have strong hold on computer science fundamentals including Algorithms, Data structures, OOPs, Design Patterns, Operating Systems, Database Systems and Computer Networking.
   </p>
-</div>
-
-<!-- Third Container (Grid) -->
-<div class="container-fluid bg-5 text-center">    
-  <h3 class="margin">
-    <i class='fas fa-laptop-code' style='font-size:24px'></i>
-    Skills
-  </h3><br>
-  
-  </div>
 </div>
 
 <!-- Third Container (Grid) -->
@@ -90,8 +78,11 @@
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
     <p>
-      <i class='fas fa-quote-left' style='font-size:24px'></i>
-      <i class='fas fa-quote-right' style='font-size:24px'></i>
+      <div>
+      <i class='fas fa-quote-left fa-spin-hover' style='font-size:24px'></i>
+      <p id="quotes"></p>
+      <i class='fas fa-quote-right fa-spin-hover' style='font-size:24px'></i>
+      </div>
       <br>
       Let's connect!!!<br>
       Shoot at <u>rathodjatan@gmail.com</u>
