--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src='https://kit.fontawesome.com/a076d05399.js'></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
   <script src="js/index.js"></script>
 </head>
@@ -27,7 +26,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">JATAN RATHOD</a>
+      <a class="navbar-brand" href="index.html">JATAN RATHOD</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
@@ -44,14 +43,17 @@
   <h3 class="margin">Welcome to my webspace!!!</h3>
   <img src="img/profile.jpg" class="img-responsive img-circle margin" alt="Profile" width="300" height="300">
   <br>
-  <h3><p id="about"></p></h3>
+  <p id="about"></p>
+  <p>
+    Experienced Software Engineer with a demonstrated history of working in the computer software industry. Skilled in ERP Systems. More likely to work with Full Stack Development, Backend Technologies, and Frontend technologies. Strong engineering professional with a Bachelor of Engineer's Degree focused in Computer Engineering from St. Francis Institute Of Technology. 
+  </p>
 </div>
 
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
-  <h3 class="margin">Who Am I?</h3>
+  <h3 class="margin">About Me</h3>
   <p>
-    Hello, I'm a Computer science enthusiast and B.Tech Information Technology graduate having a year of experience as Software Development Engineer in Internet/ERP industry.
+    Hello, I'm a Computer science enthusiast and B.E. Computer Science graduate having years of experience as Software Development Engineer in Internet/ERP industry.
     <br>
     I'm passionate about programming and delivering, clean, test-covered, well-designed and scalable code. I seek to learn and try to apply all of it in a way that makes life easier. I always try to design, develop and deliver technology solutions to problems around me.
     <br>
@@ -79,18 +81,22 @@
 <footer class="container-fluid bg-4 text-center">
     <p>
       <div>
-      <i class='fas fa-quote-left fa-spin-hover' style='font-size:24px'></i>
+      <i class='fas fa-quote-left' style='font-size:24px'></i>
       <p id="quotes"></p>
-      <i class='fas fa-quote-right fa-spin-hover' style='font-size:24px'></i>
+      <i class='fas fa-quote-right' style='font-size:24px'></i>
       </div>
       <br>
       Let's connect!!!<br>
       Shoot at <u>rathodjatan@gmail.com</u>
       <br>
-      <a href="#" class="fa fa-facebook"></a>
-      <a href="#" class="fa fa-twitter"></a>
-      <a href="#" class="fa fa-github"></a>
-      <a href="#" class="fa fa-instagram"></a>
+      <a href="https://www.linkedin.com/in/jatan-rathod/" class="fab fa-linkedin fa-2x">
+      </a>
+      <a href="https://twitter.com/rathodjatan" class="fab fa-twitter-square fa-2x">
+      </a>
+      <a href="https://github.com/jatanrathod" class="fab fa-github-square fa-2x">
+      </a>
+      <a href="https://www.instagram.com/jatan__rathod/" class="fab fa-instagram-square fa-2x">
+      </a>
     </p> 
 </footer>
 
