--- a/project.html
+++ b/project.html
@@ -4,8 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <!-- icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
+    <script src="js/index.js"></script>
 </head>
 <body>
-    <h1 style="text-align: center;">Sorry, Under Construction</h1>
+    <!-- Navbar -->
+    <nav class="navbar navbar-default" style="font-family:'sans-serif'">
+        <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>                        
+            </button>
+            <a class="navbar-brand" href="index.html">JATAN RATHOD</a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav navbar-right">
+            <li><a href="project.html">PROJECTS</a></li>
+            <li><a href="education.html">EDUCATION</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+            </ul>
+        </div>
+        </div>
+    </nav>
+
+    <h1 style="text-align: center; color: black;">Sorry, Under Construction</h1>
+
+    <!-- Footer -->
+    <footer class="container-fluid bg-4 text-center">
+        <p>
+        <!-- <div>
+        <i class='fas fa-quote-left' style='font-size:24px'></i>
+        <p id="quotes"></p>
+        <i class='fas fa-quote-right' style='font-size:24px'></i>
+        </div> -->
+        <br>
+        Let's connect!!!<br>
+        Shoot at <u>rathodjatan@gmail.com</u>
+        <br>
+        <a href="https://www.linkedin.com/in/jatan-rathod/" class="fab fa-linkedin fa-2x">
+        </a>
+        <a href="https://twitter.com/rathodjatan" class="fab fa-twitter-square fa-2x">
+        </a>
+        <a href="https://github.com/jatanrathod" class="fab fa-github-square fa-2x">
+        </a>
+        <a href="https://www.instagram.com/jatan__rathod/" class="fab fa-instagram-square fa-2x">
+        </a>
+        </p> 
+    </footer>
 </body>
 </html>
